--- a/WhatsappBotService/.prettierrc
+++ b/WhatsappBotService/.prettierrc
@@ -1,7 +1,10 @@
 {
-    "printWidth": 80,
-    "tabWidth": 2,
-    "singleQuote": true,
-    "semi": true,
-    "trailingComma": "all"
-}       
+  "printWidth": 80,         
+  "tabWidth": 3,        
+  "singleQuote": true,      
+  "semi": true,             
+  "trailingComma": "all",  
+  "bracketSpacing": true,   
+  "arrowParens": "always",  
+  "endOfLine": "lf"         
+}
