--- a/WhatsappBotService/package.json
+++ b/WhatsappBotService/package.json
@@ -30,8 +30,10 @@
     "@whiskeysockets/baileys": "^6.7.9",
     "firebase": "^11.0.2",
     "globals": "^15.12.0",
+    "kafkajs": "^2.2.4",
     "node-cache": "^5.1.2",
     "open": "^10.1.0",
     "pino": "^7.0.0"
-  }
+  },
+  "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
 }
