--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: "3.8"
+version: '3.8'
+
 services:
   firebasenotificationservice:
     build:
@@ -6,11 +7,15 @@ services:
     container_name: FirebaseNotificationService
     environment:
       - NODE_ENV=production
-      - KAFKA_BROKER=kafka:9092
+      - KAFKA_BROKER=kafka:9093
     volumes:
       - ./FirebaseNotificationService:/app
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
+    networks:
+      - kafka-network
+    restart: unless-stopped
 
   whatsappbotservice:
     build:
@@ -18,11 +23,15 @@ services:
     container_name: WhatsappBotService
     environment:
       - NODE_ENV=production
-      - KAFKA_BROKER=kafka:9092
+      - KAFKA_BROKER=kafka:9093
     volumes:
       - ./WhatsappBotService:/app
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
+    networks:
+      - kafka-network
+    restart: unless-stopped
 
   kafka:
     image: wurstmeister/kafka:latest
@@ -30,16 +39,25 @@ services:
     ports:
       - "9092:9092"
     environment:
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "my-topic:1:1"
     depends_on:
       - zookeeper
     networks:
       - kafka-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "kafka-topics.sh", "--list", "--bootstrap-server", "localhost:9093"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
   zookeeper:
     image: wurstmeister/zookeeper:latest
@@ -48,6 +66,12 @@ services:
       - "2181:2181"
     networks:
       - kafka-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "echo", "ruok", "|", "nc", "localhost", "2181", "|", "grep", "imok"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
 networks:
   kafka-network:
