--- a/WhatsappBotService/package.json
+++ b/WhatsappBotService/package.json
@@ -33,6 +33,7 @@
     "kafkajs": "^2.2.4",
     "node-cache": "^5.1.2",
     "open": "^10.1.0",
-    "pino": "^7.0.0"
+    "pino": "^7.0.0",
+    "qrcode-terminal": "^0.12.0"
   }
 }
